compiler/tests-spec/testData/diagnostics/notLinked/annotations/type-annotations/neg/4.fir.kt
// TESTCASE NUMBER: 1
@Target(AnnotationTarget.TYPE)
annotation class Ann(val x: Int)

fun case_1(): Inv<@Ann(unresolved_reference) String> = TODO()
